[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/Resources/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://ui/Resources/fonts/Punishment/Punishment.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 78
outline_size = 3
outline_color = Color( 0.372549, 0, 0, 1 )
use_filter = true
extra_spacing_char = 14
font_data = ExtResource( 3 )

[node name="MainMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -142.0
margin_top = -181.0
margin_right = 142.0
margin_bottom = 181.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 282.0
margin_bottom = 442.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="MenuRows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 260.0
margin_bottom = 420.0

[node name="TitleBox" type="MarginContainer" parent="MarginContainer/MenuRows"]
margin_right = 240.0
margin_bottom = 82.0

[node name="Title" type="Label" parent="MarginContainer/MenuRows/TitleBox"]
margin_right = 240.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "MINES"
align = 1
uppercase = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MenuRows"]
margin_top = 86.0
margin_right = 240.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/MenuRows"]
margin_top = 94.0
margin_right = 240.0
margin_bottom = 114.0
text = "Presets"
align = 1

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/MenuRows"]
margin_top = 118.0
margin_right = 240.0
margin_bottom = 118.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MenuRows"]
margin_top = 122.0
margin_right = 240.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dimension Label" type="HBoxContainer" parent="MarginContainer/MenuRows"]
margin_top = 130.0
margin_right = 240.0
margin_bottom = 130.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DimensionRow" type="HBoxContainer" parent="MarginContainer/MenuRows"]
margin_top = 134.0
margin_right = 240.0
margin_bottom = 188.0
alignment = 1

[node name="WidthVBox" type="VBoxContainer" parent="MarginContainer/MenuRows/DimensionRow"]
margin_left = 36.0
margin_right = 118.0
margin_bottom = 54.0

[node name="WidthLabel" type="Label" parent="MarginContainer/MenuRows/DimensionRow/WidthVBox"]
margin_right = 82.0
margin_bottom = 20.0
size_flags_horizontal = 11
text = "Width"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WidthValue" type="LineEdit" parent="MarginContainer/MenuRows/DimensionRow/WidthVBox"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 54.0
size_flags_horizontal = 4
align = 1
max_length = 3
editable = false

[node name="HeightVbox" type="VBoxContainer" parent="MarginContainer/MenuRows/DimensionRow"]
margin_left = 122.0
margin_right = 204.0
margin_bottom = 54.0

[node name="HeightLabel" type="Label" parent="MarginContainer/MenuRows/DimensionRow/HeightVbox"]
margin_right = 82.0
margin_bottom = 20.0
size_flags_horizontal = 11
text = "Height"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeightValue" type="LineEdit" parent="MarginContainer/MenuRows/DimensionRow/HeightVbox"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 54.0
align = 1
max_length = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineRow" type="HBoxContainer" parent="MarginContainer/MenuRows"]
margin_top = 192.0
margin_right = 240.0
margin_bottom = 222.0
alignment = 1

[node name="MineCountPrompt" type="Label" parent="MarginContainer/MenuRows/MineRow"]
margin_left = 50.0
margin_top = 5.0
margin_right = 103.0
margin_bottom = 25.0
text = "Mines: "

[node name="MineCount" type="LineEdit" parent="MarginContainer/MenuRows/MineRow"]
margin_left = 107.0
margin_right = 189.0
margin_bottom = 30.0
max_length = 3
editable = false

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MenuRows"]
margin_top = 226.0
margin_right = 240.0
margin_bottom = 230.0

[node name="SeedPrompt" type="Label" parent="MarginContainer/MenuRows"]
margin_top = 234.0
margin_right = 240.0
margin_bottom = 254.0
text = "Seed Name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="MarginContainer/MenuRows"]
margin_top = 258.0
margin_right = 240.0
margin_bottom = 298.0
text = "Random Seed"

[node name="Seedname" type="LineEdit" parent="MarginContainer/MenuRows"]
margin_top = 302.0
margin_right = 240.0
margin_bottom = 332.0
size_flags_horizontal = 3
max_length = 20
expand_to_text_length = true
placeholder_text = "Mines"

[node name="GenerateSeedButton" type="Button" parent="MarginContainer/MenuRows"]
margin_top = 336.0
margin_right = 240.0
margin_bottom = 362.0
text = "Generate Seed"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MenuRows"]
margin_top = 366.0
margin_right = 240.0
margin_bottom = 370.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MarginContainer/MenuRows"]
margin_top = 374.0
margin_right = 240.0
margin_bottom = 400.0
text = "Start"

[connection signal="text_changed" from="MarginContainer/MenuRows/DimensionRow/WidthVBox/WidthValue" to="." method="_on_WidthValue_text_changed"]
[connection signal="text_changed" from="MarginContainer/MenuRows/DimensionRow/HeightVbox/HeightValue" to="." method="_on_HeightValue_text_changed"]
[connection signal="text_changed" from="MarginContainer/MenuRows/MineRow/MineCount" to="." method="_on_MineCount_text_changed"]
[connection signal="text_changed" from="MarginContainer/MenuRows/Seedname" to="." method="_on_Seedname_text_changed"]
[connection signal="pressed" from="MarginContainer/MenuRows/GenerateSeedButton" to="." method="_on_GenerateSeedButton_pressed"]
[connection signal="pressed" from="MarginContainer/MenuRows/StartButton" to="." method="_on_StartButton_pressed"]
